<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title_text_edit"
        android:textSize="30sp"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/massEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mass_text_edit"
        android:textSize="30sp"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_price_text_edit"
        android:textSize="30sp"
        android:layout_marginTop="10sp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_vegetarian_check_box"
        android:textSize="30sp"
        android:id="@+id/isVegitarianCheckBox"
        android:layout_marginTop="10sp"/>
        <!--android:onClick="isVegitarianCheckBoxOnClicked"-->


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_to_internal"
        android:textSize="25sp"
        android:onClick="saveButtonToInternalStorageOnClick"
        android:layout_marginTop="10sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_button_from_internal"
        android:textSize="25sp"
        android:onClick="loadButtonFromInternalStorageOnClick"
        android:layout_marginTop="10sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_to_external"
        android:textSize="25sp"
        android:onClick="saveButtonToExternalStorageOnClick"
        android:layout_marginTop="10sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_button_from_external"
        android:textSize="25sp"
        android:onClick="loadButtonFromExternalStorageOnClick"
        android:layout_marginTop="10sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_from_cache_button"
        android:textSize="25sp"
        android:onClick="loadFromCacheOnClick"
        android:layout_marginTop="10sp"/>

</LinearLayout>